--- a/bibiBOT/package.json
+++ b/bibiBOT/package.json
@@ -18,6 +18,7 @@
     "dialogflow": "^0.6.0",
     "express": "^4.16.3",
     "hasha": "^3.0.0",
+    "request-progress": "^3.0.0",
     "uuid": "^3.3.2"
   }
 }
