--- a/bibiBOT/package.json
+++ b/bibiBOT/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "hasha": "^3.0.0",
     "request-progress": "^3.0.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "request":"2.88.0"
   }
 }
