--- a/bibiBOT/package.json
+++ b/bibiBOT/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "^0.6.16",
+    "dateformat": "^3.0.3",
     "debug": "^3.1.0",
     "dialogflow": "^0.6.0",
     "express": "^4.16.3",
     "hasha": "^3.0.0",
+    "request": "2.88.0",
     "request-progress": "^3.0.0",
-    "uuid": "^3.3.2",
-    "request":"2.88.0"
+    "request-promise-native": "^1.0.5",
+    "uuid": "^3.3.2"
   }
 }
